--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -19,7 +19,7 @@ const categories = [...new Set(products.map((p) => p.category))];
 
     <div class="relative z-10 max-w-4xl mx-auto">
       <h1 class="text-6xl font-bold tracking-tight">
-        <span class="text-[#d4af37]">ELITE</span> PERFORMANCE
+        <span class="text-[#d4af37]">KVALITA</span> VÝKON SPOLEHLIVOST
       </h1>
 
       <p class="mt-8 text-lg text-neutral-400">
@@ -31,17 +31,23 @@ const categories = [...new Set(products.map((p) => p.category))];
   </section>
 
   <!-- CATEGORY GRID -->
-  <section class="max-w-7xl mx-auto py-24">
+  <section class="max-w-7xl mx-auto py-1">
     <h2 class="text-3xl font-semibold mb-16 text-center text-neutral-800">
       Kategorie
     </h2>
 
-    <div class="grid md:grid-cols-3 gap-12">
+    <div class="grid md:grid-cols-4 gap-12">
       {
         categories.map((category) => (
           <a
-            href={`/kola/kategorie/${category}`}
-            class="group relative border border-neutral-300 p-16 transition hover:border-[#d4af37] text-center flex flex-col items-center"
+            href={`/kola/kategorie/${category.toLowerCase()}`}
+            class="group relative py-3 px-5 text-center flex flex-col items-center
+                  border border-neutral-200
+                  no-underline
+                  bg-white
+                  transition
+                  hover:border-[#d4af37]
+                  hover:shadow-[0_0_0_1px_rgba(212,175,55,0.4)]"
           >
             <div
               class="absolute inset-0 opacity-0 group-hover:opacity-5 transition"
@@ -55,7 +61,7 @@ const categories = [...new Set(products.map((p) => p.category))];
             <div class="mt-6 h-1 w-16 bg-neutral-800 group-hover:bg-[#d4af37] transition" />
 
             <p class="mt-6 text-neutral-500 text-sm uppercase tracking-widest">
-              Explore
+              Prozkoumej a vyber si
             </p>
           </a>
         ))
