--- a/src/pages/kola/kategorie/[category].astro
+++ b/src/pages/kola/kategorie/[category].astro
@@ -12,6 +12,7 @@ export async function getStaticPaths() {
     params: { category: c },
   }));
 }
+const currentPage = 1;
 
 const { category } = Astro.params;
 
